k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: my-app
spec:
  selector:
    app: hello-world-web
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
